refactor: streamline training notebook structure and enhance clarity of training process

--- a/luna16/notebooks/training.ipynb
+++ b/luna16/notebooks/training.ipynb
@@ -7,36 +7,20 @@
     "# Training LuNA 16 Dataset\n",
     "\n",
     "**The basic structure of what we’re going to implement is as follows:**\n",
+    "\n",
     "- Initialize our model and data loading.\n",
     "- Loop over a semi-arbitrarily chosen number of epochs.\n",
-    "  - Loop over each batch of training data returned by LunaDataset.\n",
-    "  - The data-loader worker process loads the relevant batch of data in the\n",
-    "    background.\n",
-    "  - Pass the batch into our classification model to get results.\n",
-    "  - Calculate our loss based on the difference between our predicted results and\n",
-    "    our ground-truth data.\n",
-    "  - Record metrics about our model’s performance into a temporary data\n",
-    "    structure.\n",
-    "  - Update the model weights via backpropagation of the error.\n",
+    "  - Loop over each batch of training data returned by dataset.\n",
+    "    - The data-loader worker process loads the relevant batch of data in the background.\n",
+    "    - Pass the batch into the model to get predictions.\n",
+    "    - Calculate our loss based on the difference between our predicted results and our ground-truth data.\n",
+    "    - Record metrics about our model’s performance into a temporary data structure.\n",
+    "    - Update the model weights via backpropagation of the error.\n",
     "  - Loop over each batch of validation data (in a manner very similar to the training loop).\n",
-    "  - Load the relevant batch of validation data (again, in the background worker process).\n",
-    "  - Classify the batch, and compute the loss.\n",
-    "  - Record information about how well the model performed on the validation\n",
-    "data.\n",
-    "  - Print out progress and performance information for this epoch.\n",
-    "\n",
-    "When working with bigger project and more data, we need to think about two main thinks:\n",
-    "- First, we’ll put more **structure around our program**, since the project as a whole is quite a bit more complicated than what we did in earlier chapters. Without that extra structure, the code can get messy quickly. And for this project, we will have our main training application use a number of well-contained functions, and we will further separate code for things like our dataset into self-contained Python modules.\n",
-    "- Secondly, we'll focus on **collecting a variety of metrics** about how training is progressing. Being able to accurately determine the impact of changes on training is impossible without having good metrics logging. Without spoiling the next chapter, we’ll also see how important it is to collect not just metrics, but _the right metrics for the job_.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# The main entry point for our application\n",
-    "\n",
-    "One of the big structural differences from earlier training work we’ve done in this book is that part 2 wraps our work in a fully fledged command-line application. It will parse command-line arguments, have a full-featured --help command, and be easy to run in a wide variety of environments. All this will allow us to easily invoke the training routines from both Jupyter and a Bash shell."
+    "    - Load the relevant batch of validation data (again, in the background worker process).\n",
+    "    - Classify the batch, and compute the loss.\n",
+    "    - Record information about how well the model performed on the validation data.\n",
+    "  - Log progress and performance information for this epoch.\n"
    ]
   },
   {
