refactor: update notebook references and enhance training process documentation

--- a/luna16/notebooks/processing_data.ipynb
+++ b/luna16/notebooks/processing_data.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,6 @@
    ],
    "source": [
     "ratio = dto.NoduleRatio(positive=1, negative=5)\n",
-    "\n",
     "transformations: list[augmentations.Transformation] = [\n",
     "    augmentations.Flip(),\n",
     "    augmentations.Offset(offset=0.1),\n",
@@ -183,7 +182,7 @@
     "filters: list[augmentations.Filter] = [\n",
     "    augmentations.Noise(noise=25.0),\n",
     "]\n",
-    "train = datasets.CutoutsDataset(\n",
+    "dataset = datasets.CutoutsDataset(\n",
     "    ratio=ratio,\n",
     "    validation_stride=20,\n",
     "    transformations=transformations,\n",
