--- a/luna16/notebooks/training.ipynb
+++ b/luna16/notebooks/training.ipynb
@@ -25,12 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload all"
+    "from torch.utils import data as data_utils\n",
+    "\n",
+    "from luna16 import augmentations, datasets, dto"
    ]
   },
   {
@@ -39,15 +40,69 @@
    "source": [
     "# Loading LuNA Data\n",
     "\n",
-    "Training on single samples at a time is typically an inefficient use of computing resources, because most processing platforms are capable of more parallel calculations than are required by a model to process a single training or validation sample. The solution is to group sample tuples together into a batch tuple, as in figure below, allowing multiple samples to be processed at the same time. The fifth dimension (N) differentiates multiple samples in the same batch.\n",
+    "Training on single samples at a time is typically an inefficient use of computing resources, because most processing platforms are capable of more parallel calculations than are required by a model to process a single training or validation sample. The solution is to group sample tuples together into a batch tuple, allowing multiple samples to be processed at the same time.\n",
     "\n",
-    "<figure>\n",
-    "    <center>\n",
-    "        <img src=\"attachments/dataloader.png\"  style=\"width:750px;\" >\n",
-    "    </center>\n",
-    "</figure>\n",
+    "Conveniently, we don’t have to implement any of this _batching_: the PyTorch `DataLoader` class will handle all of the collation work for us. We’ve already built the bridge from the CT scans to PyTorch tensors with our `CutoutsDataset` class, so all that remains is to plug our dataset into a data loader.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio = dto.NoduleRatio(positive=1, negative=5)\n",
+    "transformations: list[augmentations.Transformation] = [\n",
+    "    augmentations.Flip(),\n",
+    "    augmentations.Offset(offset=0.1),\n",
+    "    augmentations.Scale(scale=0.2),\n",
+    "    augmentations.Rotate(),\n",
+    "]\n",
+    "filters: list[augmentations.Filter] = [\n",
+    "    augmentations.Noise(noise=25.0),\n",
+    "]\n",
+    "dataset = datasets.CutoutsDataset(\n",
+    "    ratio=ratio,\n",
+    "    validation_stride=20,\n",
+    "    transformations=transformations,\n",
+    "    filters=filters,\n",
+    ")\n",
     "\n",
-    "Conveniently, we don’t have to implement any of this _batching_: the PyTorch `DataLoader` class will handle all of the collation work for us. We’ve already built the bridge from the CT scans to PyTorch tensors with our `LunaDataset` class, so all that remains is to plug our dataset into a data loader.\n"
+    "train_dataloader = data_utils.DataLoader(\n",
+    "    dataset=dataset,\n",
+    "    batch_size=64,\n",
+    "    num_workers=0,\n",
+    "    pin_memory=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Module\n",
+    "\n",
+    "The `DataModule` class is a custom data handling module built on top of PyTorch's `DataLoader`. It simplifies the process of creating and managing data loaders for training and validation datasets. The `DataModule` class handles the following tasks:\n",
+    "\n",
+    "- Initializes with training and validation datasets, along with a specified batch size.\n",
+    "- Determines the device (CPU or GPU) to be used for data loading and model training.\n",
+    "- Creates data loaders for both training and validation datasets, ensuring efficient data loading with support for multiple workers and CUDA pin memory if available.\n",
+    "- Provides methods to retrieve the appropriate data loader (training or validation) based on the context.\n",
+    "\n",
+    "This abstraction helps in organizing the data loading logic and makes the training and validation loops cleaner and more manageable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_module = datasets.DataModule(\n",
+    "    batch_size=64,\n",
+    "    train=dataset,\n",
+    "    validation=dataset,  # this would normally be a validation dataset\n",
+    ")"
    ]
   },
   {
@@ -58,13 +113,7 @@
     "\n",
     "Classification models often have a structure that consists of a tail, a backbone (or body), and a head. \n",
     "\n",
-    "Using a structure like this can be a good first building block for a convolutional network. There are more complicated designs out there, but for many projects they’re overkill in terms of both implementation complexity and computational demands. It’s a good idea to start simple and add complexity only when there’s a demonstrable need for it.\n",
-    "\n",
-    "<figure>\n",
-    "    <center>\n",
-    "        <img src=\"attachments/luna-model-architecture.png\"  style=\"width:750px;\" >\n",
-    "    </center>\n",
-    "</figure>\n"
+    "Using a structure like this can be a good first building block for a convolutional network. There are more complicated designs out there, but for many projects they’re overkill in terms of both implementation complexity and computational demands. It’s a good idea to start simple and add complexity only when there’s a demonstrable need for it.\n"
    ]
   },
   {
@@ -158,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
