feat: introduce modular CNN model architecture

--- a/luna16/notebooks/improving_training.ipynb
+++ b/luna16/notebooks/improving_training.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "## Graphing the positives and negatives\n",
     "\n",
-    "The actual input data we’re going to use has high dimensionality—we need to con- sider a ton of CT voxel values, along with more abstract things like candidate size, overall location in the lungs, and so on. The job of our model is to map each of these events and respective properties into this rectangle in such a way that we can separate those positive and negative events cleanly using a single vertical line (our classification threshold). This is done by the `nn.Linear` layers at the end of our model. The position of the vertical line corresponds exactly to the `classification_threshold`. There, we chose the hardcoded value `0.5` as our threshold.\n",
+    "The actual input data we’re going to use has high dimensionality—we need to consider a ton of CT voxel values, along with more abstract things like candidate size, overall location in the lungs, and so on. The job of our model is to map each of these events and respective properties into this rectangle in such a way that we can separate those positive and negative events cleanly using a single vertical line (our classification threshold). This is done by the `nn.Linear` layers at the end of our model. The position of the vertical line corresponds exactly to the `classification_threshold`. There, we chose the hardcoded value `0.5` as our threshold.\n",
     "\n",
     "> **Note for our data** The data presented is not two-dimensional; it goes from very-high-dimensional after the second-to-last layer, to one-dimensional (here, our X-axis) at the output—just a single scalar per sample (which is then bisected by the classification threshold). Here, we use the second dimension (the Y-axis) to represent per-sample features that our model cannot see or use: things like age or gender of the patient, location of the nodule candidate in the lung, or even local aspects of the candidate that the model hasn’t utilized. It also gives us a convenient way to represent confusion between non-nodule and nodule samples.\n",
     "\n",
@@ -144,7 +144,7 @@
    "source": [
     "## Using `sampler` from `DataLoader` class\n",
     "\n",
-    "One of the optional arguments to DataLoader is `sampler=...` . This allows the data loader to override the iteration order native to the dataset passed in and instead shape, limit, or reemphasize the underlying data as desired. This can be incredibly useful when working with a dataset that isn’t under your control. Taking a public dataset and reshaping it to meet your needs is far less work than reimplementing that data- set from scratch.\n",
+    "One of the optional arguments to DataLoader is `sampler=...` . This allows the data loader to override the iteration order native to the dataset passed in and instead shape, limit, or reemphasize the underlying data as desired. This can be incredibly useful when working with a dataset that isn’t under your control. Taking a public dataset and reshaping it to meet your needs is far less work than reimplementing that dataset from scratch.\n",
     "\n",
     "The downside is that many of the mutations we could accomplish with samplers require that we break encapsulation of the underlying dataset. The Dataset API only specifies that subclasses provide __len__ and __getitem__, but there is nothing direct we can use to ask hpw to sample the data."
    ]
