--- a/luna16/notebooks/processing_data.ipynb
+++ b/luna16/notebooks/processing_data.ipynb
@@ -15,9 +15,7 @@
     "1) Load candidates dataframes with nodule annotations.\n",
     "2) Use the `Ct` class to constructs a 3D voxel array. \n",
     "3) Use center coordinates from candidate dataframe to crop a 3D array, cutout, and map it to it's annotations.\n",
-    "4) Save this pair (cutout + annotations) into one `.npz` file.\n",
-    "\n",
-    "> **NOTE**: (I,R,C) stands for (Index, Row, Column)\n"
+    "4) Save this pair (cutout + annotations) into one `.npz` file.\n"
    ]
   },
   {
@@ -99,7 +97,7 @@
    "source": [
     "## 2) Coordinates Transformation\n",
     "\n",
-    "The patient coordinate system is measured in millimeters and has an arbitrarily positioned origin that does not correspond to the origin of the CT voxel array, as shown in figure above.\n",
+    "The patient coordinate system is measured in millimeters and has an arbitrarily positioned origin that does not correspond to the origin of the CT voxel array.\n",
     "\n",
     "The patient coordinate system is often used to specify the locations of interesting anatomy in a way that is independent of any particular scan. The metadata that defines the relationship between the CT array and the patient coordinate system is stored in the header of DICOM files, and that meta-image format preserves the data in its header as well. This metadata allows us to construct the transformation from (X,Y,Z) to (I,R,C).\n",
     "\n",
