docs: enhance training notebook with detailed explanations on initialization, bias, batch normalization, and dropout

--- a/luna16/notebooks/training.ipynb
+++ b/luna16/notebooks/training.ipynb
@@ -122,7 +122,11 @@
    "source": [
     "## Initialization\n",
     "\n",
-    "TBD"
+    "Kaiming Normal initialization was chosen for weight initialization because it's designed to work well with the ReLU activation function. This approach helps maintain a healthy gradient flow through the network, preventing vanishing or exploding gradients even in deep architectures. \n",
+    "\n",
+    "Biases were initialized to zero to start with no additional offset, allowing the network to rely solely on the learned weights to adjust activation outputs.\n",
+    "\n",
+    "We are using `fan_in` mode because it is default and it seems to be good place to start.\n"
    ]
   },
   {
@@ -212,7 +216,9 @@
     "\n",
     "#### Biased vs. Unbiased Convolution\n",
     "\n",
-    "TBD\n"
+    "The `bias` parameter in a convolutional layer is a learnable offset that is added to the output of the convolution. It’s a way to allow the network to adjust the output of the convolutional layer in a way that isn’t dependent on the input.\n",
+    "\n",
+    "When using batch normalization, we explicitly set `bias` to `False. Batch normalizations already includes a learnable bias term. Having bias in both convolutional layer and batch normalization is redundant since the batch normalization bias can accomplish the same thing. \n"
    ]
   },
   {
@@ -239,7 +245,16 @@
    "source": [
     "### Batch Normalization\n",
     "\n",
-    "TBD\n"
+    "`BatchNorm3d` is a PyTorch module that applies batch normalization specifically designed for 3D inputs. It normalizes each channel of a 5D tensor (with shape [N, C, D, H, W]), ensuring that the outputs have a standard distribution (typically zero mean and unit variance) during training. \n",
+    "\n",
+    "This normalization helps reduce internal covariate shift, which can lead to faster convergence and improved overall stability of the network during training. Additionally, `BatchNorm3d` can provide a regularizing effect, potentially reducing the need for other forms of regularization like dropout.\n",
+    "\n",
+    "> **Note**: [N, C, D, H, W] stands for:\n",
+    "> - **N** = **Batch size** (Number of samples)\n",
+    "> - **C** = **Channels** (like RGB for images, or feature channels)\n",
+    "> - **D** = **Depth** (the z-axis)\n",
+    "> - **H** = **Height** (the y-axis)\n",
+    "> - **W** = **Width** (the x-axis)\n"
    ]
   },
   {
@@ -248,11 +263,15 @@
    "source": [
     "### Dropout\n",
     "\n",
-    "TBD\n",
+    "Dropout is a regularization technique used to prevent overfitting in neural networks. During training, dropout randomly sets a fraction of the input units to zero at each update, which helps the model to not rely too much on any individual neuron. As a result, it encourages the network to learn more robust, distributed features.\n",
     "\n",
     "#### Dropout vs. Dropout3d\n",
     "\n",
-    "TBD\n"
+    "- **Dropout:** Applies dropout independently to each element (neuron) in a layer, which works well for fully connected layers or 2D convolutional layers. It randomly drops out neurons, forcing the network to rely on a combination of features rather than any single path.\n",
+    "  \n",
+    "- **Dropout3d:** Specifically designed for 3D data (commonly used in 3D convolutional neural networks), Dropout3d drops whole channels (i.e., entire feature maps) instead of individual neurons. This helps preserve the spatial structure of the data and avoids artifacts that can occur when individual voxels in a feature map are dropped at random.\n",
+    "\n",
+    "Sometimes, even when working with 3D data, standard Dropout may be preferred over Dropout3d. In scenarios where the model benefits from preserving complete feature maps across channels, yet still requires regularization at a more granular level, using Dropout can allow selective deactivation of individual elements. This can be particularly effective when each voxel carries critical localized information that might be lost if entire channels were dropped.\n"
    ]
   }
  ],
