--- a/luna16/notebooks/training.ipynb
+++ b/luna16/notebooks/training.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[02/20/25 15:25:06] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">CutoutsDataset</span><span style=\"font-weight: bold\">(</span><span style=\"color: #808000; text-decoration-color: #808000\">len</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">47499</span>, <span style=\"color: #808000; text-decoration-color: #808000\">positive_len</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">77</span>, <span style=\"color: #808000; text-decoration-color: #808000\">negative_len</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">47422</span>,    <a href=\"file:///Users/macbook/Projects/luna16/luna16/datasets/nodule_cutouts.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">nodule_cutouts.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///Users/macbook/Projects/luna16/luna16/datasets/nodule_cutouts.py#95\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">95</span></a>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         <span style=\"color: #808000; text-decoration-color: #808000\">train</span>=<span style=\"color: #00ff00; text-decoration-color: #00ff00; font-style: italic\">True</span>, <span style=\"color: #808000; text-decoration-color: #808000\">validation_stride</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">20</span><span style=\"font-weight: bold\">)</span>                                 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                    </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[02/20/25 15:25:06]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m \u001b[1;35mCutoutsDataset\u001b[0m\u001b[1m(\u001b[0m\u001b[33mlen\u001b[0m=\u001b[1;36m47499\u001b[0m, \u001b[33mpositive_len\u001b[0m=\u001b[1;36m77\u001b[0m, \u001b[33mnegative_len\u001b[0m=\u001b[1;36m47422\u001b[0m,    \u001b]8;id=664104;file:///Users/macbook/Projects/luna16/luna16/datasets/nodule_cutouts.py\u001b\\\u001b[2mnodule_cutouts.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=112795;file:///Users/macbook/Projects/luna16/luna16/datasets/nodule_cutouts.py#95\u001b\\\u001b[2m95\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m                    \u001b[0m         \u001b[33mtrain\u001b[0m=\u001b[3;92mTrue\u001b[0m, \u001b[33mvalidation_stride\u001b[0m=\u001b[1;36m20\u001b[0m\u001b[1m)\u001b[0m                                 \u001b[2m                    \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ratio = dto.NoduleRatio(positive=1, negative=5)\n",
     "transformations: list[augmentations.Transformation] = [\n",
@@ -94,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
